--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I am Aditya</h1>
     <h2 class="pro-grammer">
       a <span class="pro">pro</span>grammer. </h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/adi.jpg" alt="Aditya's picture" class="profile-pic">
+      <img src="adi.jpg" alt="Aditya's picture" class="profile-pic">
       <h2>Hello.</h2>
       <p class="intro">I'm an Engineering student, who happens to be fascinated by the idea of making websites and getting rich.</p>
     </div>
@@ -28,7 +28,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skill-images-invoker" src="images/gaming.png" alt="Gaming picture">
+        <img class="skill-images-invoker" src="gaming.png" alt="Gaming picture">
         <h3>Gaming</h3>
         <p>Gaming has always been my passion, I've played countless hours of games, mainly FPS games, and that that directly or indirectly has helped me a lot in divising conclusions within a constrained time limit.</p>
       </div>
