--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="adi.jpg" alt="Aditya's picture" class="profile-pic">
+      <img src="adi.JPG" alt="Aditya's picture" class="profile-pic">
       <h2>Hello.</h2>
       <p class="intro">I'm an Engineering student, who happens to be fascinated by the idea of making websites and getting rich.</p>
     </div>
