--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h3>Contact me on my Social Media platforms.</h3>
       </h3>
       <p class="contact-message">Whether you want me to make you a top-notch website or just play a round of Dota 2 turbo, feel free to contact me on my provided social media accounts.</p>
-      <a class="example_f" href="mailto:name@email.com"><span>CONTACT ME</a>
+      <a class="example_f" href="mailto:achaudhary.chaudhary991@gmail.com"><span>CONTACT ME</a>
     </div>
   </div>
 
